# Phosphor

./: .gitignore  Cargo.toml  Dockerfile.linux-build  LICENSE  Makefile  Makefile.windows  README.md  build.rs  com.phosphor.usbsid-bridge.plist  install.sh
.cargo/: config.toml
.github/workflows/: rust.yaml  windows-release.yml
docs/: .gitignore  README.md  _config.yml  index.md  style.css
docs/_layouts/: default.html
macos/: Bridge.entitlements  Info.plist  Phosphor.entitlements  build_bundle.sh  build_pkg.sh  com.phosphor.usbsid-bridge.plist  install-daemon.sh  uninstall-daemon.sh
packaging/: phosphor.desktop
packaging/debian/: postinst  postrm
playlists/: 10_Years_HVSC.m3u  Encore64.m3u  Epic_C64_SID_Collection.m3u  HVSC_Favorite_Top_100.m3u  High_Voltage_Collection_Demo_Disk_402.m3u  The_C64_Grand_Tour_Challenge_2021.m3u  Zoo_2019___wacek_mix.m3u  Zyron___Coloured_Fields__The__1995_.m3u  Zyron___Concluded_Cuts__2000_.m3u  Zyron___Echoes_of_Rapture__1996_.m3u  Zyron___Forgotten_Beats__1993_.m3u  Zyron___Laserdance_Collection__1991_.m3u  Zyron___Music_Collection__01__1990_.m3u  Zyron___Music_Collection__02__1991_.m3u  Zyron___Music_Collection__03__1991_.m3u  Zyron___Music_Collection__04__1991_.m3u  Zyron___Music_Collection__05__1991_.m3u  Zyron___Music_Collection__06__1991_.m3u  Zyron___Music_Collection__07__1991_.m3u  Zyron___Music_Collection__08__1992_.m3u  Zyron___Music_Collection__09__1992_.m3u  Zyron___Music_Collection__10__1992_.m3u  Zyron___Music_Collection__11__1992_.m3u  Zyron___Music_Collection__12__1992_.m3u  Zyron___Music_Collection__13__1992_.m3u  Zyron___Music_Collection__14__1993_.m3u  Zyron___Music_Collection__15__1993_.m3u  Zyron___Music_Collection__16__1993_.m3u  Zyron___Music_Collection__17__1993_.m3u  Zyron___Opera_Omnia_1__1993_.m3u  Zyron___Opera_Omnia_2__1994_.m3u  Zyron___Opera_Omnia_3__1994_.m3u  Zyron___Opera_Omnia_4__1995_.m3u  Zyron___Oxsid_Book__The__1997_.m3u  Zyron___Symptom_from_Afghanistan__A__1995_.m3u  index.json
src/: assembly64.rs  assembly64_browser.rs  audio_stream.rs  audio_volume.rs  config.rs  daemon_installer.rs  debug_log.rs  device_config.rs  favorites.rs  heard_db.rs  hvsc_browser.rs  hvsc_sync.rs  main.rs  petscii.rs  playlist.rs  published_playlists.rs  published_playlists_browser.rs  recently_played.rs  remote.rs  sid_device.rs  sid_direct.rs  sid_emulated.rs  sid_sidlite.rs  sid_u64.rs  stil.rs  usb_bridge.rs  version_check.rs
src/c64_emu/: c64.rs  event.rs  mmu.rs  mod.rs  roms.rs
src/c64_emu/banks/: bank.rs  color_ram.rs  disconnected_bus.rs  extra_sid.rs  io_bank.rs  mod.rs  sid_bank.rs  system_ram.rs  system_rom.rs  zero_ram.rs
src/c64_emu/cia/: interrupt.rs  mod.rs  timer.rs  tod.rs
src/c64_emu/vic_ii/: lightpen.rs  mod.rs  sprites.rs
src/player/: hacks.rs  libsidplayfp.rs  memory.rs  mod.rs  priority.rs  rsid_bus.rs  sid_file.rs
src/ui/: device_panel.rs  font.rs  mod.rs  right_click.rs  sid_panel.rs  visualizer.rs
windows/: build_installer.ps1  phosphor.iss
