[package]
name = "phosphor"
version = "0.2.0"
edition = "2021"
description = "Phosphor — a SID player for USBSID-Pico and software emulation"

[features]
default = ["usb", "emulated"]
usb = ["dep:usbsid-pico"]
emulated = ["dep:resid-rs", "dep:cpal"]

[dependencies]
# GUI
iced = { version = "0.14", features = ["canvas", "tokio", "image"] }
rfd = "0.15"

# 6502 emulation
mos6502 = "0.8"

# USBSID hardware (optional — only needed for real SID chip output)
usbsid-pico = { version = "0.1.5", features = ["usb"], optional = true }

# Software SID emulation (optional — for audio output without hardware)
resid-rs = { git = "https://github.com/sandlbn/resid-rs", optional = true }
cpal = { version = "0.15", optional = true }

# Player ↔ GUI communication
crossbeam-channel = "0.5"

# Shuffle & randomisation
rand = "0.8"

# Songlength MD5 (HVSC)
md5 = "0.7"

# Directory scanning for adding folders
walkdir = "2"

# Logging
env_logger = "0.11"
log = "0.4"
image = "0.25.9"

# Unix signal handling (macOS/Linux)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# The bridge binary is feature-gated in source, but this hint tells
# `cargo install` and `cargo run --bin` to require the usb feature.
[[bin]]
name = "usbsid-bridge"
path = "src/bin/usbsid-bridge.rs"
required-features = ["usb"]