[package]
name = "phosphor"
version = "0.2.2"
edition = "2021"
description = "Phosphor — a SID player for USBSID-Pico"

[features]
default = ["usb"]
usb = []

[dependencies]
# GUI
iced = { version = "0.14", features = ["canvas", "tokio", "image"] }
rfd = "0.15"

# 6502 emulation + USBSID hardware
mos6502 = "0.8"
usbsid-pico = { version = "0.1.5", features = ["usb"] }

# Software SID emulation
resid-rs = { git = "https://github.com/sandlbn/resid-rs", optional = false }
cpal = "0.15"

# Ultimate 64 REST API
ultimate64 = "0.5"
url = "2.5"

# Player ↔ GUI communication
crossbeam-channel = "0.5"

# Shuffle & randomisation
rand = "0.8"

# Songlength MD5 (HVSC)
md5 = "0.7"

# Directory scanning for adding folders
walkdir = "2"

# Logging
env_logger = "0.11"
log = "0.4"
image = "0.25.9"
tokio = "1.49.0"
# Version checking
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

# Unix signal handling (macOS/Linux)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"


[package.metadata.deb]
maintainer = "Marcin Spoczynski <marcin@spoczynski.comsss>"
section = "sound"
priority = "optional"
depends = "$auto"

extended-description = """\
Phosphor is a SID music player for USBSID-Pico hardware, software emulation, and Ultimate 64 network playback."""

assets = [
  # binary (note: target/release is *special* for cargo-deb; keep it exactly like this) :contentReference[oaicite:2]{index=2}
  ["target/release/phosphor", "usr/bin/", "755"],

  # docs (optional; $auto would include README anyway, but explicit is fine)
  ["README.md", "usr/share/doc/phosphor/README.md", "644"],
  ["LICENSE", "usr/share/doc/phosphor/LICENSE", "644"],

  # udev rules (recommended if you need non-root USB access)
  ["packaging/99-usbsid-pico.rules", "etc/udev/rules.d/99-usbsid-pico.rules", "644"],

  # optional desktop integration (Linux desktop)
  # ["packaging/phosphor.desktop", "usr/share/applications/phosphor.desktop", "644"],
  # ["assets/icons/phosphor.png", "usr/share/pixmaps/phosphor.png", "644"],
]