[package]
name = "phosphor"
version = "0.4.5"
edition = "2021"
description = "Phosphor — a SID player for USBSID-Pico / Ultimate 64"

[features]
default = ["usb"]
usb = []

[dependencies]
# GUI
iced = { version = "0.14", features = ["advanced","canvas", "tokio", "image"] }
rfd = "0.15"

# 6502 emulation + USBSID hardware
mos6502 = "0.8"
usbsid-pico = { version = "0.1.13", features = ["usb"] }
usbsid-pico-config = { version = "0.1.1", default-features = false }

# HVSC sync over HTTP(S) — recursive directory mirror via gosh-dl. We crawl
# an Apache-style index (e.g. www.prg.dtu.dk/HVSC/C64Music/) and download
# every file we find. Failover + resume + multi-conn are built into the
# engine. Pure-Rust, no subprocess, works on Windows.
# Pinned to a sandlbn/gosh-dl fork commit, not the upstream crates.io
# release, because we need two patches that aren't in 0.5.0:
#   - configurable RecursiveOptions::max_files / max_pages (was 0.5.1)
#   - normalize_url + extract_links strip Apache mod_autoindex sort links
#     (?C=N;O=D etc.) so the crawler stops exploding request count 5×
# Crate name `gosh-dl` on crates.io is owned upstream, so we pin by git
# rev rather than publishing a *-phosphor fork. Swap to a tagged
# crates.io release once upstream merges or we rename.
gosh-dl = { git = "https://github.com/sandlbn/gosh-dl", rev = "4faf0530827f6879402ae5e78c49d0073c528a35", features = ["http", "recursive-http"] }

# Software SID emulation
resid-rs = { git = "https://github.com/sandlbn/resid-rs", optional = false }
cpal = "0.15"

# SIDLite emulation from libsidplayfp
sidlite-sys = "0.1.1"

# Full libsidplayfp player (cycle-accurate CPU for RSID)
sidplayfp-sys =  "0.1.4"

# Ultimate 64 REST API
ultimate64 = "0.5"
url = "2.5"

# Player ↔ GUI communication
crossbeam-channel = "0.5"

# Shuffle & randomisation
rand = "0.8"

# Songlength MD5 (HVSC)
md5 = "0.7"

# Directory scanning for adding folders
walkdir = "2"

# Remote control HTTP server
tiny_http = "0.12"

# Logging
env_logger = "0.11"
log = "0.4"
image = "0.25.9"
tokio = { version = "1.49.0", features = ["rt", "fs", "io-util", "macros", "time"] }
# Version checking
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

# Unix signal handling (macOS/Linux)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"


[package.metadata.deb]
maintainer = "Marcin Spoczynski <marcin@spoczynski.comsss>"
section = "sound"
priority = "optional"
depends = "$auto"

extended-description = """\
Phosphor is a SID music player for USBSID-Pico hardware, software emulation, and Ultimate 64 network playback."""

assets = [
  # binary (note: target/release is *special* for cargo-deb; keep it exactly like this) :contentReference[oaicite:2]{index=2}
  ["target/release/phosphor", "usr/bin/", "755"],

  # docs (optional; $auto would include README anyway, but explicit is fine)
  ["README.md", "usr/share/doc/phosphor/README.md", "644"],
  ["LICENSE", "usr/share/doc/phosphor/LICENSE", "644"],

  # udev rules (recommended if you need non-root USB access)
  ["packaging/99-usbsid-pico.rules", "etc/udev/rules.d/99-usbsid-pico.rules", "644"],

  # desktop integration (menu entry + icon)
  ["packaging/phosphor.desktop", "usr/share/applications/phosphor.desktop", "644"],
  ["assets/phosphor.png", "usr/share/icons/hicolor/256x256/apps/phosphor.png", "644"],
  ["assets/phosphor.png", "usr/share/pixmaps/phosphor.png", "644"],
]

# Maintainer scripts to refresh desktop/icon caches so the menu entry shows up
# without requiring a logout. Falls back silently if the helper tools aren't installed.
maintainer-scripts = "packaging/debian"
